--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.2.0",
     "react-qr-code": "^2.0.18",
     "recharts": "^3.5.1",
+    "sonner": "^2.0.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
