--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.0",
+    "@tanstack/react-query": "^5.90.12",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
