--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,29 @@
-name: CI Pipeline
+name: CI
 
 on:
   push:
-    branches: [master, main, develop]
+    branches: ["main", "develop"]
   pull_request:
-    branches: [master, main, develop]
+    branches: ["main", "develop"]
 
 jobs:
-  build-and-lint:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "20.x"
           cache: "npm"
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Linting
+      - name: Run Lint
         run: npm run lint
 
-      - name: Run Build
-        run: npm run build
-
-  # Example of Module Specific Job (Future Proofing)
-  # tickets-module:
-  #   if: contains(github.event.pull_request.changed_files, 'components/features/tickets/')
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - run: echo "Running Ticket Tests..."
+      - name: Run Tests
+        run: npm run test -- --run
