--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "eslint",
     "test": "vitest",
-    "prepare": "husky"
+    "prepare": "husky",
+    "audit": "pnpm audit",
+    "db:dump": "echo 'Error: SUPABASE_PROJECT_ID not set' && exit 1",
+    "types:sync": "echo 'Error: SUPABASE_PROJECT_ID not set' && exit 1",
+    "test:all": "vitest run"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
