chore: automatización de mantenimiento y correcciones para windows
- Implementar script de instalación personalizada de Supabase CLI para Windows (setup-supabase.js)

- Corregir script de backup de base de datos para entornos Docker/Postgres

- Configurar scripts de auditoría y sincronización de tipos en package.json

- Actualizar documentación de solución de problemas en MAINTENANCE.md

- Limpieza de código y corrección de advertencias de linter

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "vitest",
     "prepare": "husky",
     "audit": "pnpm audit",
-    "db:dump": "echo 'Error: SUPABASE_PROJECT_ID not set' && exit 1",
-    "types:sync": "echo 'Error: SUPABASE_PROJECT_ID not set' && exit 1",
+    "db:dump": "node scripts/db-backup.js",
+    "types:sync": "node scripts/types-sync.js",
     "test:all": "vitest run"
   },
   "dependencies": {
