fix(build): corrección de tipos admin y configuración pnpm para despliegue
- Extracción de tipos de UI admin a src/app/admin/admin.types.ts para resolver conflictos de exportación.
- Actualización de importaciones en AdminDashboard.
- Configuración de package.json para permitir scripts de build (pnpm.onlyBuiltDependencies).
- Ajuste de script 'prepare' (husky) para compatibilidad con CI/Vercel.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "test": "vitest",
-    "prepare": "husky",
+    "prepare": "husky || true",
     "audit": "pnpm audit",
     "db:dump": "node scripts/db-backup.js",
     "types:sync": "node scripts/types-sync.js",
@@ -56,5 +56,13 @@
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.15"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp",
+      "supabase",
+      "husky"
+    ]
   }
 }
